--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /plugins/de.ovgu.featureide.examples/featureide_examples/BankAccount-FH-JML/src
 /plugins/de.ovgu.featureide.examples/featureide_examples/ExamDB-FH-JML-withoutPMR/src
 /plugins/de.ovgu.featureide.examples/featureide_examples/StringMatcher-FH-JML/src
+/.DS_Store
