--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -804,6 +804,7 @@
     <wizard
           category="de.ovgu.featureide.fm.ui.category"
           class="de.ovgu.featureide.fm.ui.wizards.NewConfigurationWizard"
+          hasPages="true"
           icon="icons/NewConfigurationIcon.png"
           id="de.ovgu.featureide.fm.ui.wizards.NewConfigurationWizard"
           name="Configuration File"
