--- a/plugins/de.ovgu.featureide.oscar.propertyusage/.project
+++ b/plugins/de.ovgu.featureide.oscar.propertyusage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.ovgu.featureide.oscar.propertyusage</name>
+	<name>de.ovgu.featureide.core.oscar.propertyusage</name>
 	<comment></comment>
 	<projects>
 	</projects>
