--- a/plugins/de.ovgu.featureide.oscar.propertyusage/build.properties
+++ b/plugins/de.ovgu.featureide.oscar.propertyusage/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
+               src/,\
+               bin/,\
                icons/
