--- a/plugins/de.ovgu.featureide.oscar.propertyusage/plugin.xml
+++ b/plugins/de.ovgu.featureide.oscar.propertyusage/plugin.xml
@@ -6,20 +6,81 @@
          point="org.eclipse.ui.commands">
       <category
             name="Find Usage Category"
-            id="PropertyUsage.commands.category">
+            id="de.ovgu.featureide.core.oscar.propertyusage.commands.category">
       </category>
       <command
             name="Find Property Usage"
             categoryId="PropertyUsage.commands.category"
-            id="PropertyUsage.commands.findUsageCommand">
+            id="de.ovgu.featureide.core.oscar.propertyusage.commands.findUsageCommand">
       </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            commandId="PropertyUsage.commands.findUsageCommand"
-            class="propertyusage.handlers.PropertyUsage">
+            commandId="de.ovgu.featureide.core.oscar.propertyusage.commands.findUsageCommand"
+            class="de.ovgu.featureide.core.oscar.propertyusage.handlers.PropertyUsage">
       </handler>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:de.ovgu.featureide.fm.ui.menus.popupMenu?after=de.ovgu.featureide.fm.ui.menus.popupMenu.submenus">
+         <command
+               commandId="de.ovgu.featureide.core.oscar.propertyusage.commands.findUsageCommand"
+               icon="icons/FeatureIconSmall.ico"
+               id="de.ovgu.featureide.oscar.propertyusage.actions.findUsageCommand"
+               label="Find Oscar Property Usage"
+               style="push"
+               tooltip="Find Oscar Property Usage in Oscar code.">
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="de.ovgu.featureide.ui.expressions.onlyProjects">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <!--
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="PropertyUsage.commands.findUsageCommand"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+6"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
+      </key>
+   </extension>
+
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+         <menu
+               label="Find Property"
+               mnemonic="M"
+               id="PropertyUsage.menus.findUsageMenu">
+            <command
+                  commandId="PropertyUsage.commands.findUsageCommand"
+                  mnemonic="S"
+                  id="PropertyUsage.menus.findUsageCommand">
+            </command>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+         <toolbar
+               id="PropertyUsage.toolbars.findUsageToolbar">
+            <command
+                  commandId="PropertyUsage.commands.findUsageCommand"
+                  icon="icons/findUsage.gif"
+                  tooltip="Find Oscar Property Usage"
+                  id="PropertyUsage.toolbars.findUsageCommand">
+            </command>
+         </toolbar>
+      </menuContribution>
+   </extension>
+      -->
 
 </plugin>
