--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -9,7 +9,6 @@ bin.includes = META-INF/,\
                .options,\
                .project,\
                .settings/,\
-               ANTLR_Tool_Velvet.launch,\
                LinkedList.xml,\
                Velvet.g,\
                build.properties,\
@@ -18,6 +17,4 @@ bin.includes = META-INF/,\
                schema/,\
                siegmund.dtd.txt,\
                test/,\
-               lib/,\
-               library/
-
+               lib/
