Fixed problem in build.properties of example project.

--- a/plugins/de.ovgu.featureide.examples/build.properties
+++ b/plugins/de.ovgu.featureide.examples/build.properties
@@ -7,16 +7,8 @@ bin.includes = plugin.xml,\
                featureide_examples/,\
                build.properties,\
                src/,\
+               .classpath,\
                .project,\
                license.txt,\
-               projects.xml,\
-               .classpath,\
-               .gitignore,\
-               .options,\
-               .settings/,\
-               UpdateIndexFiles_Force.launch,\
-               UpdateIndexFiles.launch,\
-               jar/,\
-               readme.txt,\
-               template_projectInformation.xml,\
-               build.xml
+               bin/,\
+               projects.xml
