Generate files in PropertyUsage

--- a/plugins/de.ovgu.featureide.core.runtime/plugin.xml
+++ b/plugins/de.ovgu.featureide.core.runtime/plugin.xml
@@ -31,4 +31,11 @@
           name="RuntimeFMComposer">
     </fmComposer>
  </extension>
+ <extension
+       point="org.eclipse.ui.menus">
+    <menuContribution
+          allPopups="false"
+          locationURI="de.ovgu.featureide.core.runtime.menuContribution1">
+    </menuContribution>
+ </extension>
 </plugin>
