Slightly restructured FeatureIDE context menu for feature model files.

--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -328,6 +328,19 @@
 					</reference>
 				</visibleWhen>
 			</command>
+			<command
+					commandId="de.ovgu.featureide.fm.ui.commands.AnalyzeVelvet"
+					icon="icons/FeatureIconSmall.ico"
+					id="de.ovgu.featureide.fm.ui.actions.AnalyzeVelvet"
+					label="Analyze Velvet Model"
+					style="push">
+				<visibleWhen
+						checkEnabled="false">
+					<reference
+							definitionId="de.ovgu.featureide.fm.ui.expressions.containsVelvet">
+					</reference>
+				</visibleWhen>
+			</command>
 			<separator
 					name="de.ovgu.featureide.fm.ui.separator5"
 					visible="true">
@@ -358,6 +371,19 @@
 					</reference>
 				</visibleWhen>
 			</command>
+			<command
+					commandId="de.ovgu.featureide.fm.ui.commands.ExportCNF"
+					icon="icons/export_wiz.gif"
+					id="de.ovgu.featureide.fm.ui.actions.ExportCNF"
+					label="Export CNF"
+					style="push">
+				<visibleWhen
+						checkEnabled="false">
+					<reference
+							definitionId="de.ovgu.featureide.fm.ui.expressions.containsFeatureModel">
+					</reference>
+				</visibleWhen>
+			</command>
 			<separator
 					name="de.ovgu.featureide.fm.ui.separator7"
 					visible="true">
@@ -380,18 +406,22 @@
 					visible="true">
 			</separator>
 			<command
-					commandId="de.ovgu.featureide.fm.ui.commands.AnalyzeVelvet"
-					icon="icons/FeatureIconSmall.ico"
-					id="de.ovgu.featureide.fm.ui.actions.AnalyzeVelvet"
-					label="Analyze Velvet Model"
+					commandId="de.ovgu.featureide.fm.ui.commands.ExportSPLConquerer"
+					icon="icons/export_wiz.gif"
+					id="de.ovgu.featureide.fm.ui.actions.ExportSPLConquerer"
+					label="Export model to SPL Conquerer format"
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
 					<reference
-							definitionId="de.ovgu.featureide.fm.ui.expressions.containsVelvet">
+							definitionId="de.ovgu.featureide.fm.ui.expressions.containsFeatureModel">
 					</reference>
 				</visibleWhen>
 			</command>
+   <separator
+         name="de.ovgu.featureide.fm.ui.separator10"
+         visible="true">
+   </separator>
 			<command
 					commandId="de.ovgu.featureide.fm.ui.commands.FeatureModelSlicing"
 					icon="icons/featuretree.ico"
@@ -422,32 +452,6 @@
 					name="de.ovgu.featureide.fm.ui.separator4"
 					visible="true">
 			</separator>
-			<command
-					commandId="de.ovgu.featureide.fm.ui.commands.ExportCNF"
-					icon="icons/export_wiz.gif"
-					id="de.ovgu.featureide.fm.ui.actions.ExportCNF"
-					label="Export CNF"
-					style="push">
-				<visibleWhen
-						checkEnabled="false">
-					<reference
-							definitionId="de.ovgu.featureide.fm.ui.expressions.containsFeatureModel">
-					</reference>
-				</visibleWhen>
-			</command>
-			<command
-					commandId="de.ovgu.featureide.fm.ui.commands.ExportSPLConquerer"
-					icon="icons/export_wiz.gif"
-					id="de.ovgu.featureide.fm.ui.actions.ExportSPLConquerer"
-					label="Export model to SPL Conquerer format"
-					style="push">
-				<visibleWhen
-						checkEnabled="false">
-					<reference
-							definitionId="de.ovgu.featureide.fm.ui.expressions.containsFeatureModel">
-					</reference>
-				</visibleWhen>
-			</command>
 			<command
 					commandId="de.ovgu.featureide.fm.ui.commands.FeatureDependencies"
 					icon="icons/export_wiz.gif"
