Fix errors related to access restriction of jdt.core.manipulation

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,17 @@
 
 	<build>
 		<plugins>
+		
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>0.22.0</version>
+				<configuration>
+					<compilerArgument>-warn:none</compilerArgument>     
+					<compilerArgument>-err:none</compilerArgument>      
+				</configuration>
+			</plugin>
+		
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
