--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -130,6 +130,9 @@
 			<contentTypeBinding
 					contentTypeId="de.ovgu.featureide.fm.ui.featureModel.sxfm">
 			</contentTypeBinding>
+   <contentTypeBinding
+         contentTypeId="de.ovgu.featureide.fm.attributes.extendedFeatureModel">
+   </contentTypeBinding>
 		</editor>
 		<editor
 				class="de.ovgu.featureide.fm.ui.editors.configuration.ConfigurationEditor"
