--- a/plugins/de.ovgu.featureide.attributes/.classpath
+++ b/plugins/de.ovgu.featureide.attributes/.classpath
@@ -3,5 +3,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/javasmt-1.0.1-219-g535f988.jar"/>
+	<classpathentry kind="lib" path="lib/common-0.3000-229-g055f2fd.jar"/>
+	<classpathentry kind="lib" path="lib/error_prone_annotations-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/guava-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="lib/guava-testlib-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-3.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/spotbugs-annotations-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/truth-0.39.jar"/>
+	<classpathentry kind="lib" path="lib/truth-java8-extension-0.39.jar"/>
+	<classpathentry kind="lib" path="lib/com.microsoft.z3.jar"/>
+	<classpathentry kind="lib" path="lib/smtinterpol-2.1-335-g4c543a5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
