--- a/plugins/de.ovgu.featureide.attributes/plugin.xml
+++ b/plugins/de.ovgu.featureide.attributes/plugin.xml
@@ -44,23 +44,17 @@
       </content-type>
       <content-type
             base-type="org.eclipse.core.runtime.xml"
-            id="de.ovgu.featureide.fm.attributes.extendedConfiguration"
+            file-extensions="exml"
+            id="de.ovgu.featureide.contenttype.extendedConfiguration"
             name="ExtendedConfigurationFormat"
             priority="normal">
-         <describer
-               class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber2">
-            <parameter
-                  name="element"
-                  value="extendedConfiguration">
-            </parameter>
-         </describer>
       </content-type>
    </extension>
    <extension
          point="de.ovgu.featureide.fm.core.ConfigFormat">
       <configFormat
             class="de.ovgu.featureide.fm.attributes.config.XmlExtendedConfFormat"
-            id="de.ovgu.featureide.fm.attributes.conf.XmlExtendedConfFormat"
+            id="de.ovgu.featureide.fm.attributes.format.config.XmlExtendedConfFormat"
             name="XmlExtendedConfFormat">
       </configFormat>
    </extension>
