--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -12,7 +12,7 @@
 	<extension point="org.eclipse.core.contenttype.contentTypes">
 		<content-type
 				base-type="org.eclipse.core.runtime.text"
-				file-extensions="conf,config,equation,expression,exml"
+				file-extensions="conf,config,equation,expression"
 				id="de.ovgu.featureide.contenttype.conf"
 				name="Configuration (for FeatureIDE projects)"
 				priority="high"/>
@@ -147,6 +147,9 @@
 			<contentTypeBinding
 					contentTypeId="de.ovgu.featureide.contenttype.confXML">
 			</contentTypeBinding>
+   <contentTypeBinding
+         contentTypeId="de.ovgu.featureide.contenttype.extendedConfiguration">
+   </contentTypeBinding>
 		</editor>
 	</extension>
 
