--- a/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
@@ -41,6 +41,17 @@
                   value="extendedFeatureModel">
             </parameter>
          </describer>
+         <property
+               default="de.ovgu.featureide.fm.attributes.format.XmlExtendedFeatureModelFormat"
+               name="de.ovgu.featureide.fm.ui.contentType.format">
+         </property>
       </content-type>
    </extension>
+   <extension
+			point="org.eclipse.ui.editors">
+  <editorContentTypeBinding
+        contentTypeId="de.ovgu.featureide.fm.attributes.extendedFeatureModel"
+        editorId="de.ovgu.featureide.fm.ui.editors.FeatureModelEditor">
+  </editorContentTypeBinding>
+	</extension>
 </plugin>
