--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -31,5 +31,11 @@ bin.includes = META-INF/,\
                lib/smtinterpol-2.1-335-g4c543a5.jar,\
                lib/spotbugs-annotations-3.1.1.jar,\
                lib/truth-0.39.jar,\
-               lib/truth-java8-extension-0.39.jar
+               lib/truth-java8-extension-0.39.jar,\
+               lib/java-cup-11a.jar,\
+               lib/parser.jar,\
+               lib/princess-all.jar,\
+               lib/princess.jar,\
+               lib/scala-library-2.11.1.jar,\
+               lib/smt-parser.jar
 
