Updated readme file.
Converted text file to markdown file.

--- a/plugins/de.ovgu.featureide.examples/build.properties
+++ b/plugins/de.ovgu.featureide.examples/build.properties
@@ -17,6 +17,6 @@ bin.includes = plugin.xml,\
                UpdateIndexFiles_Force.launch,\
                UpdateIndexFiles.launch,\
                jar/,\
-               readme.txt,\
+               readme.md,\
                template_projectInformation.xml,\
                build.xml
