Fixed build.properties of example plug-in.

--- a/plugins/de.ovgu.featureide.examples/build.properties
+++ b/plugins/de.ovgu.featureide.examples/build.properties
@@ -18,5 +18,4 @@ bin.includes = plugin.xml,\
                UpdateIndexFiles.launch,\
                jar/,\
                readme.md,\
-               template_projectInformation.xml,\
-               build.xml
+               template_projectInformation.xml
