--- a/.project
+++ b/.project
@@ -16,25 +16,25 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1447695622628</id>
+			<id>1523475680239</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-true-false-tests</arguments>
+				<arguments>1.0-projectRelativePath-matches-true-false-tests/*</arguments>
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622638</id>
+			<id>1523475680254</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-projectRelativePath-matches-true-false-plugins</arguments>
+				<arguments>1.0-projectRelativePath-matches-true-false-plugins/*</arguments>
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622650</id>
+			<id>1523475680273</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -43,7 +43,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622661</id>
+			<id>1523475680318</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -52,7 +52,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622671</id>
+			<id>1523475680319</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -61,7 +61,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622683</id>
+			<id>1523475680321</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -70,12 +70,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1447695622698</id>
+			<id>1523475680323</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-projectRelativePath-matches-true-false-misc</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1523475680324</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-true-false-gui-tests/*</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
