--- a/deploy/NightlyUpdate/pom.xml
+++ b/deploy/NightlyUpdate/pom.xml
@@ -10,35 +10,34 @@
 	<artifactId>de.ovgu.featureide.update</artifactId>
 	<packaging>eclipse-repository</packaging>
 
-
-
-
 <!--
 	<build>
-	  <plugins>
-	     <plugin>
-	         <groupId>org.eclipse.tycho.extras</groupId>
-	         <artifactId>tycho-p2-extras-plugin</artifactId>
-	         <version>${tycho-version}</version>
-	         <executions>
-	             <execution>
-	                 <phase>prepare-package</phase>
-	                 <goals>
-	                     <goal>mirror</goal>
-	                 </goals>
-	             </execution>
-	         </executions>
-	         <configuration>
-	            <source>
-	                 <repository>
-	                    <url>http://localhost:8081/nexus/content/sites/FeatureIDE3.x-Update-Site/repository/</url>
-	                 </repository>
-	            </source>
-	             <destination>${project.build.directory}/repository</destination>
-	            <compress>true</compress>
-	         </configuration>
-	     </plugin>
-	  </plugins>
+		<plugins>
+		    <plugin>
+		         <groupId>org.eclipse.tycho.extras</groupId>
+		         <artifactId>tycho-p2-extras-plugin</artifactId>
+		         <version>${tycho-version}</version>
+		         <executions>
+		             <execution>
+		                 <phase>prepare-package</phase>
+		                 <goals>
+		                     <goal>mirror</goal>
+		                 </goals>
+		             </execution>
+		         </executions>
+		         <configuration>
+		            <source>
+		                 <repository>
+		                    <url>http://localhost:8081/nexus/content/sites/FeatureIDE3.x-Update-Site/repository/</url>
+		                 </repository>
+		            </source>
+		            <destination>${project.build.directory}/repository</destination>
+		            <append>true</append>
+		            <compress>false</compress>
+		            <mirrorMetadataOnly>true</mirrorMetadataOnly>
+		         </configuration>
+		    </plugin>
+		</plugins>
 	</build>
 -->
 </project>
