--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.ovgu.featureide</groupId>
-		<artifactId>de.ovgu.featureide</artifactId>
+		<artifactId>de.ovgu.featureide.root</artifactId>
 		<version>3.5.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -13,8 +13,7 @@
 	<modules>
 		<!--Features-->
 		<module>br.ufal.ic.colligens.feature</module>
-		<!--TODO rename to de.ovgu.featureide.feature -->
-		<module>de.ovgu.featureide.feature</module>
+		<module>de.ovgu.featureide</module>
 		<module>de.ovgu.featureide.ahead</module>
 		<module>de.ovgu.featureide.antenna</module>
 		<module>de.ovgu.featureide.aspectj</module>
