--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.ovgu.featureide</groupId>
-	<artifactId>de.ovgu.featureide</artifactId>
+	<artifactId>de.ovgu.featureide.root</artifactId>
 	<version>3.5.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
