Created current version without SMT

--- a/plugins/de.ovgu.featureide.fm.attributes/build.properties
+++ b/plugins/de.ovgu.featureide.fm.attributes/build.properties
@@ -11,4 +11,5 @@ bin.includes = META-INF/,\
                license.txt,\
                .settings/,\
                .gitignore,\
-               icons/
+               icons/,\
+               lib/
