--- a/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
@@ -72,8 +72,8 @@
    <extension
          point="de.ovgu.featureide.fm.ui.ConfigurationOutlineEntry">
       <configurationOutlineEntry
-            class="de.ovgu.featureide.fm.attributes.computations.impl.AttributeComputationBundle"
-            id="de.ovgu.featureide.fm.attributes.computations.impl.AttributeComputationBundle"
+            class="de.ovgu.featureide.fm.attributes.outlineentry.AttributeComputationBundle"
+            id="de.ovgu.featureide.fm.attributes.outlineentry.AttributeComputationBundle"
             name="AttributeComputations">
       </configurationOutlineEntry>
    </extension>
