--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>de.ovgu.featureide</groupId>
-    <artifactId>de.ovgu.featureide</artifactId>
+    <artifactId>de.ovgu.featureide.root</artifactId>
     <version>3.5.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
@@ -21,6 +21,7 @@
             <extensions>true</extensions>
             <configuration> 
                 <runner>
+                	<!--<version>2.3.0-20180405.233927-307</version>-->
                     <!-- Manage the memory used by Runner -->
                     <vmArgs>
                         <vmArg>-Xmx1024m</vmArg>
@@ -29,9 +30,11 @@
                 <aut>
                   <explicit>https://ftp.fau.de/eclipse/technology/epp/downloads/release/neon/3/eclipse-rcp-neon-3-linux-gtk-x86_64.tar.gz</explicit>
               		<injections>
+              			
                   		<injection>
                     		<site>file://${project.parent.basedir}/deploy/NightlyUpdate/target/repository</site>
                   		</injection>
+                  		
               		</injections>
 
                 </aut>
